--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,19 +6,22 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:weightSum="100"
+    android:background="#000000"
     tools:context="com.cs235.casualbetting.HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="0dp"
-        android:layout_weight="20">
+        android:layout_weight="20"
+        android:layout_margin="5dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="14"
-            android:id="@+id/balanceView"/>
+            android:id="@+id/balanceView"
+            android:background="#ffffee"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -45,41 +48,27 @@
     </LinearLayout>
 
 
-    <ImageView
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="20"/>
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="20"
+        android:background="@drawable/betnow"
+        android:id="@+id/betnowBtn"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp"
-        android:layout_weight="40">
+        android:layout_weight="60">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:layout_weight="20">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="10"
-                android:layout_margin="5dp"
-                android:background="#FFEECC">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="10"
-                android:layout_margin="5dp"
-                android:background="#FFEECC">
-
-            </LinearLayout>
+            android:layout_weight="15"
+            android:background="#FFEECC"
+            android:layout_margin="5dp">
 
         </LinearLayout>
 
@@ -87,25 +76,27 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            android:layout_weight="20">
+            android:layout_weight="45">
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:layout_margin="5dp"
-                android:background="#FFEECC">
+                android:background="@drawable/previous_bet"
+                android:id="@+id/previousBetView">
 
-            </LinearLayout>
+            </ImageView>
 
-            <LinearLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:layout_margin="5dp"
-                android:background="#FFEECC">
+                android:background="@drawable/current_bet"
+                android:id="@+id/currentBetView">
 
-            </LinearLayout>
+            </ImageView>
 
         </LinearLayout>
 
