--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:weightSum="100"
+    android:background="#000000"
     android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"/>
+        android:layout_height="0dp"
+        android:layout_weight="40"
+        android:background="@drawable/casualbettorbanner"/>
 
 
     <LinearLayout
@@ -27,6 +29,8 @@
             android:layout_height="0dp"
             android:hint="@string/loginID"
             android:layout_weight="5"
+            android:textColor="#ffffff"
+            android:textColorHint="#ddcefa"
             android:id="@+id/idText"/>
 
         <EditText
@@ -35,6 +39,8 @@
             android:hint="@string/loginPass"
             android:inputType="textPassword"
             android:layout_weight="5"
+            android:textColor="#ffffff"
+            android:textColorHint="#ddcefa"
             android:id="@+id/passText"/>
 
 
@@ -64,11 +70,54 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_weight="30">
+        android:layout_weight="10">
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_weight="10"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp">
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:id="@+id/iconUS"
+            android:layout_margin="5dp"
+            android:background="@drawable/icon_us"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:id="@+id/iconJP"
+            android:background="@drawable/icon_japan"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:id="@+id/iconVI"
+            android:background="@drawable/icon_vietnam"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="10">
 
     </LinearLayout>
 
